Fix for alignment and story control disable.

--- a/src/components/ecl-breadcrumb/src/styles/ecl-breadcrumb-eu.scss
+++ b/src/components/ecl-breadcrumb/src/styles/ecl-breadcrumb-eu.scss
@@ -7,3 +7,12 @@
   $theme: theme.$theme,
   $breadcrumb: var.$breadcrumb
 );
+
+:host {
+  display: contents;
+}
+
+.ecl-breadcrumb__segment > ::slotted([slot='icon-after']) {
+  display: flex;
+  align-items: center;
+}
